--- a/projects/ngx-spa-support-demo/src/app/app.component.html
+++ b/projects/ngx-spa-support-demo/src/app/app.component.html
@@ -1,22 +1,63 @@
 <ngx-spa-support>
   <ngx-spa-support-menu>
-    <a *ngFor="let menuItem of menuItems" [ngxSpaAnchor]="menuItem.link">
+    <a
+      *ngFor="let menuItem of menuItems"
+      [ngxSpaAnchor]="menuItem.link"
+      [ngStyle]="{ background: menuItem.active ? 'red' : '' }"
+    >
       {{ menuItem.data["label"] }}
     </a>
   </ngx-spa-support-menu>
 
   <ngx-spa-support-scrollable>
-    <section [id]="section.link" *ngFor="let section of menuItems">
-      {{ section | json }}
-      <input
+    <section
+      [id]="section.link"
+      *ngFor="let section of menuItems; let index = index"
+    >
+      <!-- {{ section | json }} -->
+      <!-- <input
         type="checkbox"
         name="scrollSnapping"
+        [checked]="spaConfig.scrollSnapping"
         id=""
         (change)="onToggleScrollSnaping()"
       />
-      <label for="scrollSnapping">Scroll snapping</label>
-      <button ngxSpaAnchorUpward>Go upward</button>
-      <button ngxSpaAnchorDownward>Go downward</button>
+      <label for="scrollSnapping">Scroll snapping</label> -->
+
+      <mat-card>
+        <mat-card-content>
+          <div *ngIf="index === 1">
+            <h2 class="mat-h2">📲 ngx-spa-support</h2>
+
+            <div class="badges">
+              <img
+                src="https://img.shields.io/npm/v/ngx-spa-support"
+                alt="version"
+                class="badge"
+              />
+              <img
+                src="https://img.shields.io/npm/dt/ngx-spa-support"
+                alt="downloads"
+                class="badge"
+              />
+            </div>
+          </div>
+
+          <mat-checkbox
+            [checked]="spaConfig.scrollOnCreated"
+            (change)="onToggleScrollOnCreated($event)"
+            >Auto-scroll to new created sections</mat-checkbox
+          >
+
+          <button ngxSpaAnchorUpward [disabled]="isFirstSection(index)">
+            Go upward
+          </button>
+          <button (click)="addNewSection()">Add a section</button>
+          <button ngxSpaAnchorDownward [disabled]="isLatestSection(index)">
+            Go downward
+          </button>
+        </mat-card-content>
+      </mat-card>
     </section>
   </ngx-spa-support-scrollable>
 </ngx-spa-support>
